--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "jsnlog": "^2.22.0",
     "jsnlog-nodejs": "^2.22.0",
     "log4js": "*",
-    "memory-cache": "*",
+    "memory-cache": "^0.1.6",
     "mysql": "*",
     "nodemailer": "0.3.x",
     "passport": "*",
