--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "dependencies": {
     "archiver": "^1.3.0",
-    "async": "*",
+    "async": "^2.1.4",
     "body-parser": "^1.15.2",
     "config": "*",
     "connect-flash": "*",
