--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,10 @@
     "jquery-ui": "jqueryui#^1.12.1",
     "jquery": "^3.1.1",
     "gulp": "^3.9.1",
-    "jsnlog.js": "jsnlog#^2.22.0"
+    "jsnlog.js": "jsnlog#^2.22.0",
+    "angular": "^1.6.1",
+    "angular-route": "^1.6.1",
+    "angular-animate": "^1.6.1",
+    "angular-resource": "^1.6.1"
   }
 }
