--- a/bower.json
+++ b/bower.json
@@ -27,6 +27,7 @@
     "angular": "^1.6.1",
     "angular-route": "^1.6.1",
     "angular-animate": "^1.6.1",
-    "angular-resource": "^1.6.1"
+    "angular-resource": "^1.6.1",
+    "webcamjs": "^1.0.16"
   }
 }
