--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "jsnlog": "^2.22.0",
     "log4js": "*",
     "memory-cache": "^0.1.6",
-    "mysql": "*",
+    "mysql": "^2.12.0",
     "nodemailer": "0.3.x",
     "passport": "*",
     "passport-local": "*",
