--- a/bower.json
+++ b/bower.json
@@ -28,6 +28,7 @@
     "angular-route": "^1.6.1",
     "angular-animate": "^1.6.1",
     "angular-resource": "^1.6.1",
-    "webcamjs": "^1.0.16"
+    "webcamjs": "^1.0.16",
+    "underscore": "^1.8.3"
   }
 }
